css/parser/tests/errors/number/minus-dot/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/number/minus-dot/input.css:1:11
  |
1 | a { width: -0.; }
  |           ^^^^

